--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,17 @@ h1 span {
   line-height: 1.1rem;
 }
 
+/* Notice applicant */
+.main .applicant {
+  width: 25%;
+  text-align: center;
+  font-size: 8px;
+  font-weight: 900;
+  position: absolute;
+  right: 60px;
+  bottom: 82px;
+}
+
 /* Notice author */
 .main .author {
   width: 25%;
